force-app/main/default/objects/Lv_Client__c/fields/Lv_Adresse__c.field-meta.xml
<CustomField>
    <fullName>Lv_Adresse__c</fullName>
    <label>Adresse</label>
    <type>TextArea</type>
</CustomField>