force-app/main/default/objects/Lv_Client__c/fields/Lv_Email__c.field-meta.xml
<CustomField>
    <fullName>Lv_Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>