force-app/main/default/objects/Lv_Client__c/fields/Lv_Identification_Numero__c.field-meta.xml
<CustomField>
    <fullName>Lv_Identification_Numero__c</fullName>
    <label>Identification Numero</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>