force-app/main/default/objects/Lv_Client__c/fields/Lv_Prenom__c.field-meta.xml
<CustomField>
    <fullName>Lv_Prenom__c</fullName>
    <label>Prenom</label>
    <length>100</length>
    <type>Text</type>
</CustomField>