force-app/main/default/objects/Lv_Client__c/fields/Lv_Telephone__c.field-meta.xml
<CustomField>
    <fullName>Lv_Telephone__c</fullName>
    <label>Telephone</label>
    <type>Phone</type>
</CustomField>